add docker-compose.mustache, add get_all_buckets API, modified model-list.sh
