# services/huber_regression/src/specs/openapi.yaml
@@ -250,6 +250,17 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+
+  /bucket/list:
+    get:
+      operationId: src.controllers.get_list_buckets
+      description: Returns all pets from the system that the user has access to
+      responses:
+        200:
+          description: A list of pets.
+          schema:
+            $ref: '#/definitions/Error'
+        
           
 definitions:
   Error:
